# rust-operating-systems

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
benches/: filesystem_bench.rs  ipc_bench.rs  memory_bench.rs  mutex_bench.rs  paging_bench.rs  processes_bench.rs  scheduling_bench.rs  semaphores_bench.rs  signals_bench.rs  virtual_memory_bench.rs
diagrams/: 01-procesos-e-hilos.mmd  02-mutex.mmd  03-semaforos.mmd  04-memoria.mmd  05-scheduling.mmd  06-paging.mmd  07-memoria-virtual.mmd  08-senales.mmd  09-ipc.mmd  10-filesystem.mmd
docs/: 01-procesos-e-hilos.md  02-mutex.md  03-semaforos.md  04-memoria.md  05-scheduling.md  06-paging.md  07-memoria-virtual.md  08-senales.md  09-ipc.md  10-filesystem.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-16-rust-operating-systems-course.md
examples/: filesystem_advanced.rs  filesystem_basic.rs  filesystem_intermediate.rs  filesystem_real_case.rs  ipc_advanced.rs  ipc_basic.rs  ipc_intermediate.rs  ipc_real_case.rs  memory_advanced.rs  memory_basic.rs  memory_intermediate.rs  memory_real_case.rs  mutex_advanced.rs  mutex_basic.rs  mutex_intermediate.rs  mutex_real_case.rs  paging_advanced.rs  paging_basic.rs  paging_intermediate.rs  paging_real_case.rs  processes_advanced.rs  processes_basic.rs  processes_intermediate.rs  processes_real_case.rs  scheduling_advanced.rs  scheduling_basic.rs  scheduling_intermediate.rs  scheduling_real_case.rs  semaphores_advanced.rs  semaphores_basic.rs  semaphores_intermediate.rs  semaphores_real_case.rs  signals_advanced.rs  signals_basic.rs  signals_intermediate.rs  signals_real_case.rs  virtual_memory_advanced.rs  virtual_memory_basic.rs  virtual_memory_intermediate.rs  virtual_memory_real_case.rs
examples/soluciones/: address_space_isolation.rs  copy_on_write_model.rs  filesystem_directory.rs  filesystem_inode.rs  filesystem_permissions.rs  ipc_backpressure.rs  ipc_message_queue.rs  ipc_pipe.rs  memory_allocation.rs  memory_fragmentation.rs  memory_region.rs  mutex_contention.rs  mutex_lock_unlock.rs  mutex_poisoning_model.rs  page_fault.rs  page_replacement.rs  page_translation.rs  process_lifecycle.rs  process_tree.rs  scheduler_priority.rs  scheduler_round_robin.rs  scheduler_starvation.rs  semaphore_acquire_release.rs  semaphore_capacity.rs  semaphore_wait_queue.rs  signal_delivery.rs  signal_handler.rs  signal_mask.rs  thread_spawn_join.rs  virtual_address_translation.rs
src/: filesystem.rs  ipc.rs  lib.rs  memory.rs  mutex.rs  paging.rs  processes.rs  scheduling.rs  semaphores.rs  signals.rs  virtual_memory.rs
tests/: filesystem_test.rs  ipc_test.rs  memory_test.rs  mutex_test.rs  paging_test.rs  processes_test.rs  scheduling_test.rs  semaphores_test.rs  signals_test.rs  virtual_memory_test.rs
