[package]
name = "rust-operating-systems"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-operating-systems"
description = "Sistemas operativos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_operating_systems"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_process_lifecycle"
path = "examples/soluciones/process_lifecycle.rs"

[[example]]
name = "solution_thread_spawn_join"
path = "examples/soluciones/thread_spawn_join.rs"

[[example]]
name = "solution_process_tree"
path = "examples/soluciones/process_tree.rs"

[[example]]
name = "solution_mutex_lock_unlock"
path = "examples/soluciones/mutex_lock_unlock.rs"

[[example]]
name = "solution_mutex_contention"
path = "examples/soluciones/mutex_contention.rs"

[[example]]
name = "solution_mutex_poisoning_model"
path = "examples/soluciones/mutex_poisoning_model.rs"

[[bench]]
name = "processes_bench"
harness = false

[[bench]]
name = "mutex_bench"
harness = false
