[package]
name = "rust-operating-systems"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-operating-systems"
description = "Sistemas operativos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_operating_systems"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_process_lifecycle"
path = "examples/soluciones/process_lifecycle.rs"

[[example]]
name = "solution_thread_spawn_join"
path = "examples/soluciones/thread_spawn_join.rs"

[[example]]
name = "solution_process_tree"
path = "examples/soluciones/process_tree.rs"

[[example]]
name = "solution_mutex_lock_unlock"
path = "examples/soluciones/mutex_lock_unlock.rs"

[[example]]
name = "solution_mutex_contention"
path = "examples/soluciones/mutex_contention.rs"

[[example]]
name = "solution_mutex_poisoning_model"
path = "examples/soluciones/mutex_poisoning_model.rs"

[[example]]
name = "solution_semaphore_acquire_release"
path = "examples/soluciones/semaphore_acquire_release.rs"

[[example]]
name = "solution_semaphore_capacity"
path = "examples/soluciones/semaphore_capacity.rs"

[[example]]
name = "solution_semaphore_wait_queue"
path = "examples/soluciones/semaphore_wait_queue.rs"

[[example]]
name = "solution_memory_region"
path = "examples/soluciones/memory_region.rs"

[[example]]
name = "solution_memory_allocation"
path = "examples/soluciones/memory_allocation.rs"

[[example]]
name = "solution_memory_fragmentation"
path = "examples/soluciones/memory_fragmentation.rs"

[[example]]
name = "solution_scheduler_round_robin"
path = "examples/soluciones/scheduler_round_robin.rs"

[[example]]
name = "solution_scheduler_priority"
path = "examples/soluciones/scheduler_priority.rs"

[[example]]
name = "solution_scheduler_starvation"
path = "examples/soluciones/scheduler_starvation.rs"

[[example]]
name = "solution_page_translation"
path = "examples/soluciones/page_translation.rs"

[[example]]
name = "solution_page_fault"
path = "examples/soluciones/page_fault.rs"

[[example]]
name = "solution_page_replacement"
path = "examples/soluciones/page_replacement.rs"

[[example]]
name = "solution_virtual_address_translation"
path = "examples/soluciones/virtual_address_translation.rs"

[[example]]
name = "solution_address_space_isolation"
path = "examples/soluciones/address_space_isolation.rs"

[[example]]
name = "solution_copy_on_write_model"
path = "examples/soluciones/copy_on_write_model.rs"

[[bench]]
name = "processes_bench"
harness = false

[[bench]]
name = "mutex_bench"
harness = false

[[bench]]
name = "semaphores_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "scheduling_bench"
harness = false

[[bench]]
name = "paging_bench"
harness = false

[[bench]]
name = "virtual_memory_bench"
harness = false
